--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "I will also make sure that it is easy to update without redownloading everything (that is what the 'Update' paragraph in each notebook is for!). However it is *not* optimized to update daily. I only intend to update monthly. My backtesting and live trading framework will be different. E.g. for a trading system that trades daily bars, I will only download the required daily bars every day in the live system and not update the entire database for all tickers. For a day-trading system I will use screeners, which also do not require downloading all 6000+ stocks. In would be very hard to constantly stream 6000+ stocks at the same time, if not impossible.\n",
     "\n",
-    "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download all tick data for all dates for all tickers in order to get quotebars, which will be several TBs. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. This is okay, because I simply will not trade HFT or systems with an average profit less than 0.3% for liquid stocks or less than 0.1% for liquid futures/CFDs. High frequency systems also won't work in Europe due to almost not having access to PFOF brokers. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day. \n",
+    "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download all tick data for all dates for all tickers in order to get quotebars, which will be several TBs. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day or something.\n",
     "\n",
     "I will organize my data in the following way (only folders and important files shown):\n",
     "\n",
@@ -52,16 +52,13 @@
     "8. Renamings.\n",
     "9. Aggregate to higher timeframes.\n",
     "10. Some extra handy functions.\n",
-    "11. Simulating point-in-time screening for day trading and backtesting.\n",
-    "12. Vectorized backtesting\n",
-    "13. Loop-based backtesting\n",
     "\n",
     "*Note: a data point at 15:59 with OHLC means that the open was at 15:59:00 and close at 16:00:00.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2198,6 +2195,84 @@
     "If a ticker changes, we thus treat them as 2 different stocks. In the end, we should thus get a META.csv and a FB.csv. We can merge them later *after* downloading all data (there is no other way, as you must use the FB ticker to get the old META data). \n",
     "\n",
     "We will take a short stop to retrieve the market hours. This is important if we want to loop through the trading days to retrieve the Polygon ticker list for each day."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.4 Problem: incorrectly labeled stocks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of 'CS', many stocks in the old ticker lists are labeled 'None'. I only found this out later when I downloaded the entire history."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ticker_list_iterator = client.list_tickers(date=\"2015-09-20\", active=True, market='stocks', limit=1000)\n",
+    "df = pd.DataFrame(ticker_list_iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ticker  type\n",
+       "12   AAPL  None"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['ticker'] == 'AAPL'][['ticker', 'type']]"
    ]
   }
  ],
