--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -11,7 +11,10 @@
     "    * Large-cap, Mid-cap, Small-cap, \n",
     "* Bond ETFs: \"BIL\", \"SHY\", \"IEF\", \"TLT\", \"JPST\", \"VCSH\", \"VCIT\", \"VCLT\" \n",
     "    * risk-free (1-3M, 1-3Y, 7-10Y, 20+Y), corporate (Overnight, 1-5Y, 5-10Y, 10-25Y)\n",
-    "* Country ETFs: 'EWA', 'EWO', 'EWK', 'EWC', 'EWQ', 'EWG', 'EWH', 'EWI', 'EWJ', 'EWM', 'EWW', 'EWN', 'EWS', 'EWP', 'EWD', 'EWL', 'EWU'\n",
+    "* Regions: \"EEM\", \"IXUS\", + SPY\n",
+    "* Region/Larger countries ETFs: \"FXI\", \"EEM\", \"VGK\", \"EWY\", \"EWZ\", \"EWJ\", \"INDA\", \"EWW\" + SPY\n",
+    "    * Based on the Finviz map the largest region ETFs.\n",
+    "* Country ETFs: 'EWA', 'EWO', 'EWK', 'EWC', 'EWQ', 'EWG', 'EWH', 'EWI', 'EWJ', 'EWM', 'EWW', 'EWN', 'EWS', 'EWP', 'EWD', 'EWL', 'EWU' + SPY\n",
     "    * The iShares ETFs that were released before 2000 and thus have a very long history of data. Often the most liquid.\n",
     "* Sector ETFs: \"XLE\", \"XLU\", \"XLK\", \"XLB\", \"XLP\", \"XLY\", \"XLC\", \"XLV\", \"XLF\", \"XLRE\"\n",
     "    * The sectors that Finviz also uses.\n",
@@ -25,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +41,8 @@
     "import numpy as np\n",
     "\n",
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
-    "\n",
-    "START_DATE = first_trading_date_after_equal(date(2019, 6, 1))\n",
-    "END_DATE = last_trading_date_before_equal(date(2024, 4, 15))\n",
+    "START_DATE = first_trading_date_after_equal(date(2003, 9, 10))\n",
+    "END_DATE = last_trading_date_before_equal(date(2024, 4, 19))\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -57,23 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "size_ETFs = [\"SPY\", \"IJH\", \"IJR\"]\n",
     "bond_ETFs = [\"BIL\", \"SHY\", \"IEF\", \"TLT\", \"JPST\", \"VCSH\", \"VCIT\", \"VCLT\" ]\n",
     "sector_ETFs = [\"XLE\", \"XLU\", \"XLK\", \"XLB\", \"XLP\", \"XLY\", \"XLC\", \"XLV\", \"XLF\", \"XLRE\"]\n",
+    "region_ETFs = [\"EEM\", \"IXUS\"]\n",
+    "\n",
+    "subregion_ETFs = [\"FXI\", \"EEM\", \"VGK\", \"EWY\", \"EWZ\", \"EWJ\", \"INDA\", \"EWW\"]\n",
     "country_ETFs = ['EWA', 'EWO', 'EWK', 'EWC', 'EWQ', 'EWG', 'EWH', 'EWI', 'EWJ', \\\n",
     "    'EWM', 'EWW', 'EWN', 'EWS', 'EWP', 'EWD', 'EWL', 'EWU']\n",
     "commodity_ETFs = [\"GLD\", \"SLV\"]\n",
     "volatility_ETFs = [\"VXX\", \"UVIX\", \"SVIX\", \"SVXY\"]\n",
-    "all_ETFs = size_ETFs + bond_ETFs + sector_ETFs + country_ETFs + commodity_ETFs + volatility_ETFs"
+    "\n",
+    "all_ETFs = list(set(size_ETFs + bond_ETFs + sector_ETFs + region_ETFs + \\\n",
+    "    country_ETFs + subregion_ETFs + commodity_ETFs + volatility_ETFs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +131,18 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>EEM</td>\n",
+       "      <td>iShares MSCI Emerging Markets ETF</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ETF</td>\n",
+       "      <td>0000930667</td>\n",
+       "      <td>BBG000M0P5L2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>EWA</td>\n",
        "      <td>iShares MSCI Australia ETF</td>\n",
        "      <td>True</td>\n",
@@ -133,18 +152,6 @@
        "      <td>0000930667</td>\n",
        "      <td>BBG000BDNJ29</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EWC</td>\n",
-       "      <td>iShares MSCI Canada ETF</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>0001100663</td>\n",
-       "      <td>BBG000BJSXB0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -152,16 +159,16 @@
       "text/plain": [
        "   ID ticker                                 name  active  start_date  \\\n",
        "0 NaN    BIL  SPDR Bloomberg 1-3 Month T-Bill ETF    True         NaN   \n",
-       "1 NaN    EWA           iShares MSCI Australia ETF    True         NaN   \n",
-       "2 NaN    EWC              iShares MSCI Canada ETF    True         NaN   \n",
+       "1 NaN    EEM    iShares MSCI Emerging Markets ETF    True         NaN   \n",
+       "2 NaN    EWA           iShares MSCI Australia ETF    True         NaN   \n",
        "\n",
        "   end_date type         cik composite_figi  \n",
        "0       NaN  ETF  0001064642   BBG000RFQSH8  \n",
-       "1       NaN  ETF  0000930667   BBG000BDNJ29  \n",
-       "2       NaN  ETF  0001100663   BBG000BJSXB0  "
+       "1       NaN  ETF  0000930667   BBG000M0P5L2  \n",
+       "2       NaN  ETF  0000930667   BBG000BDNJ29  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,37 +292,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8698</th>\n",
-       "      <td>XLY-2019-06-03</td>\n",
+       "      <th>19070</th>\n",
+       "      <td>XLY-2003-09-10</td>\n",
        "      <td>XLY</td>\n",
        "      <td>Consumer Discretionary Select Sector SPDR Fund</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2024-04-19</td>\n",
        "      <td>ETF</td>\n",
        "      <td>0001064641</td>\n",
        "      <td>BBG000BJ1MF9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8699</th>\n",
-       "      <td>GLD-2019-06-03</td>\n",
+       "      <th>19071</th>\n",
+       "      <td>GLD-2008-05-22</td>\n",
        "      <td>GLD</td>\n",
        "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <td>2008-05-22</td>\n",
+       "      <td>2024-04-19</td>\n",
        "      <td>ETF</td>\n",
        "      <td>0001222333</td>\n",
        "      <td>BBG000CRF6Q8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8700</th>\n",
-       "      <td>SLV-2019-06-03</td>\n",
+       "      <th>19072</th>\n",
+       "      <td>SLV-2006-04-28</td>\n",
        "      <td>SLV</td>\n",
        "      <td>iShares Silver Trust</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <td>2006-04-28</td>\n",
+       "      <td>2024-04-19</td>\n",
        "      <td>ETF</td>\n",
        "      <td>0001330568</td>\n",
        "      <td>BBG000NDCRW7</td>\n",
@@ -325,18 +332,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                  ID ticker                                            name  \\\n",
-       "8698  XLY-2019-06-03    XLY  Consumer Discretionary Select Sector SPDR Fund   \n",
-       "8699  GLD-2019-06-03    GLD               SPDR Gold Trust, SPDR Gold Shares   \n",
-       "8700  SLV-2019-06-03    SLV                            iShares Silver Trust   \n",
+       "                   ID ticker                                            name  \\\n",
+       "19070  XLY-2003-09-10    XLY  Consumer Discretionary Select Sector SPDR Fund   \n",
+       "19071  GLD-2008-05-22    GLD               SPDR Gold Trust, SPDR Gold Shares   \n",
+       "19072  SLV-2006-04-28    SLV                            iShares Silver Trust   \n",
        "\n",
-       "      active  start_date    end_date type         cik composite_figi  \n",
-       "8698    True  2019-06-03  2024-04-15  ETF  0001064641   BBG000BJ1MF9  \n",
-       "8699    True  2019-06-03  2024-04-15  ETF  0001222333   BBG000CRF6Q8  \n",
-       "8700    True  2019-06-03  2024-04-15  ETF  0001330568   BBG000NDCRW7  "
+       "       active  start_date    end_date type         cik composite_figi  \n",
+       "19070    True  2003-09-10  2024-04-19  ETF  0001064641   BBG000BJ1MF9  \n",
+       "19071    True  2008-05-22  2024-04-19  ETF  0001222333   BBG000CRF6Q8  \n",
+       "19072    True  2006-04-28  2024-04-19  ETF  0001330568   BBG000NDCRW7  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
