--- a/05_download_adjustments.ipynb
+++ b/05_download_adjustments.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 6, 1)\n",
-    "END_DATE = date(2024, 4, 15)\n",
+    "START_DATE = date(2003, 9, 10)\n",
+    "END_DATE = date(2024, 4, 19)\n",
     "\n",
-    "CLEAN_DOWNLOAD = False # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
+    "CLEAN_DOWNLOAD = True # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,21 +125,20 @@
     "        all_adjustments = pd.concat([old_adjustments, adjustments])\n",
     "        all_adjustments['date'] = pd.to_datetime(all_adjustments['date']).dt.date\n",
     "        all_adjustments = all_adjustments.sort_values(by='date').reset_index(drop=True)\n",
-    "\n",
-    "        # Sometimes the adjustments are duplicated for no reason.\n",
-    "        if not adjustments[adjustments['type'] == 'DIV'].empty:\n",
-    "            dividends = adjustments[adjustments['type'] == 'DIV']\n",
+    "        \n",
+    "        # Sometimes the adjustments are duplicated because multiple tickers or for no reason.\n",
+    "        if not all_adjustments[all_adjustments['type'] == 'DIV'].empty:\n",
+    "            dividends = all_adjustments[all_adjustments['type'] == 'DIV']\n",
     "            indices_to_remove = dividends[dividends[['date', 'type']].duplicated(keep='last')].index\n",
-    "            adjustments = adjustments.drop(index=indices_to_remove)\n",
-    "        if not adjustments[adjustments['type'] == 'SPLIT'].empty:\n",
-    "            splits = adjustments[adjustments['type'] == 'SPLIT']\n",
+    "            all_adjustments = all_adjustments.drop(index=indices_to_remove)\n",
+    "        if not all_adjustments[all_adjustments['type'] == 'SPLIT'].empty:\n",
+    "            splits = all_adjustments[all_adjustments['type'] == 'SPLIT']\n",
     "            indices_to_remove = splits[splits[['date', 'type']].duplicated(keep='last')].index\n",
-    "            adjustments = adjustments.drop(index=indices_to_remove)\n",
+    "            all_adjustments = all_adjustments.drop(index=indices_to_remove)\n",
     "            \n",
     "        all_adjustments.to_csv(path, index=False)\n",
     "    else:\n",
     "        adjustments.to_csv(path, index=False)\n",
-    "    print(index)\n",
     "\n",
     "# Set the END_DATE to end_date.txt\n",
     "with open(POLYGON_DATA_PATH + \"raw/adjustments/_end_date.txt\", 'w') as f:\n",
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +248,7 @@
        "2024-03-27  DIV      CD    0.35"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +318,7 @@
        "2022-08-25  SPLIT       N  0.333333"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
