--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -22,7 +22,6 @@
     "import pandas as pd\n",
     "from fastparquet import write\n",
     "\n",
-    "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "with open(DATA_PATH + \"secret.txt\") as f:\n",
@@ -53,7 +52,7 @@
    "outputs": [],
    "source": [
     "tickers = get_tickers(v=3)\n",
-    "tickers = tickers[tickers[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
+    "tickers = tickers[tickers[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\"])]\n",
     "tickers.reset_index(inplace=True, drop=True)\n",
     "\n",
     "# For timing\n",
@@ -70,6 +69,9 @@
     "    end_date = row[\"end_date\"]\n",
     "\n",
     "    m1 = download_m1_raw_data(ticker = ticker, from_ = start_date, to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
+    "    if m1 is None:\n",
+    "        continue\n",
+    "\n",
     "    m1.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "\n",
     "    # For timing (becomes accurate after 5.0%)\n",
@@ -107,7 +109,9 @@
     "\n",
     "I used ChatGPT to convert the code above to work with aiohttp. However it did not work. After manually debugging, I got it working and the file is now in <code>06_parallel.py</code>. You can specify the maximum amount of parallel requests. Setting it to 10 should make downloading 10 times faster. Be wary to not generate too many requests.\n",
     "\n",
-    "By the way, it is possible to run multiple python notebook files in VSCode. Simply copy this file multiple times, filter on <code>index</code> and run them all. This speeds it up, because the bottleneck is not processing power but the speed of a request."
+    "By the way, it is possible to run multiple python notebook files in VSCode. Simply copy this file multiple times, filter on <code>index</code> and run them all. This speeds it up, because the bottleneck is not processing power but the speed of a request.\n",
+    "\n",
+    "Since April 2024 it is possible to download flat files from Polygon which will be MUCH faster than sending a gigantic amount of requests. However I am too lazy to update my code."
    ]
   },
   {
@@ -132,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers_v4 = get_tickers(v=4, types=[\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])\n",
+    "tickers_v4 = get_tickers(v=4, types=[\"CS\", \"ADRC\", \"ETF\"])\n",
     "tickers_v4.to_csv(\"../data/tickers_v4_OLD.csv\")"
    ]
   },
@@ -142,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "old_tickers_v4 = get_tickers(v=4, types=[\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])\n",
+    "old_tickers_v4 = get_tickers(v=4, types=[\"CS\", \"ADRC\", \"ETF\"])\n",
     "old_END_DATE = old_tickers_v4['end_date'].max()\n",
     "old_IDs = list(old_tickers_v4['ID'])"
    ]
@@ -153,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers_v3 = get_tickers(v=3, types=[\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])\n",
+    "tickers_v3 = get_tickers(v=3, types=[\"CS\", \"ADRC\", \"ETF\"])\n",
     "\n",
     "for index, row in tickers_v3.iterrows():\n",
     "    id = row[\"ID\"]\n",
@@ -164,13 +168,170 @@
     "    if id in old_IDs and end_date > old_END_DATE:\n",
     "        update = download_m1_raw_data(ticker = ticker, from_ = old_END_DATE + timedelta(days=1), to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
     "        if update is not None:\n",
-    "            write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True)\n",
+    "            write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True, compression=\"snappy\", row_group_offsets=25000)\n",
     "            print(f'Updating {id}')\n",
     "\n",
     "    elif id not in old_IDs and start_date > old_END_DATE:\n",
     "        data = download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
     "        data.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "        print(f'Downloading {id}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flat files\n",
+    "Goal: download the flatfiles and split them into individual ticker files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pytz\n",
+    "import gzip\n",
+    "from pytz import timezone\n",
+    "from times import get_market_dates\n",
+    "import boto3\n",
+    "from botocore.config import Config\n",
+    "\n",
+    "START_DATE = date(2003, 9, 10)\n",
+    "END_DATE = date(2024, 4, 19)\n",
+    "\n",
+    "session = boto3.Session(\n",
+    "   aws_access_key_id='7203c471-037b-4944-96b0-effc0d3911b3',\n",
+    "   aws_secret_access_key='IOOFCMHAT7plpPitNmqFICLdG1AnhC5l',\n",
+    ")\n",
+    "s3 = session.client(\n",
+    "   's3',\n",
+    "   endpoint_url='https://files.polygon.io',\n",
+    "   config=Config(signature_version='s3v4'),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initial download\n",
+    "Download everything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODELETE\n",
+    "for day in get_market_dates(date(2004, 1, 1), END_DATE):\n",
+    "    destination = DATA_PATH + f'raw/flatfiles/{day.isoformat()}.csv.gz'\n",
+    "    s3.download_file('flatfiles', \n",
+    "                f'us_stocks_sip/minute_aggs_v1/{day.year}/{day.strftime(\"%m\")}/{day.isoformat()}.csv.gz', \n",
+    "                destination)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Process year-by-year (this takes enormously long btw, however you only need to run it one time so I won't go into the hassle to optimize speed.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in range(2003, 2024+1):\n",
+    "    files = []\n",
+    "    for day in get_market_dates(date(year, 1, 1), date(year, 12, 31)):\n",
+    "        destination = DATA_PATH + f'raw/flatfiles/{day.isoformat()}.csv.gz'\n",
+    "        with gzip.open(destination) as f:\n",
+    "            all_bars = pd.read_csv(f)\n",
+    "            all_bars = all_bars[['window_start', 'ticker', 'open', 'high', 'low', 'close', 'volume']]\n",
+    "            all_bars = all_bars.rename(columns={'window_start': 'datetime'})\n",
+    "            all_bars = all_bars.set_index('datetime')\n",
+    "            all_bars.index = pd.to_datetime(all_bars.index, unit='ns') # Convert to datetime (UTC-naive)\n",
+    "            # Make UTC aware (in order to convert)\n",
+    "            # Convert UTC to ET\n",
+    "            # Make timezone naive\n",
+    "            all_bars.index = all_bars.index.tz_localize(pytz.UTC).tz_convert(\"US/Eastern\").tz_localize(None)  \n",
+    "            files.append(all_bars)\n",
+    "            print(day)\n",
+    "        \n",
+    "    all_bars = pd.concat(files)\n",
+    "    all_bars = all_bars.reset_index()\n",
+    "    all_bars = all_bars.set_index('ticker')\n",
+    "\n",
+    "    for ticker in list(set(all_bars.index.unique())):\n",
+    "        bars = all_bars.loc[ticker]\n",
+    "        if isinstance(bars, pd.Series):\n",
+    "            bars = all_bars.loc[[ticker]]\n",
+    "        bars = bars[['datetime', 'open', 'high', 'low', 'close', 'volume']]\n",
+    "        bars = bars.set_index('datetime')\n",
+    "\n",
+    "        if os.path.isfile(DATA_PATH + f'raw/m1/{ticker}.parquet'):\n",
+    "            write(DATA_PATH + f\"raw/m1/{ticker}.parquet\", bars, append=True, compression=\"snappy\", row_group_offsets=25000)\n",
+    "        else:\n",
+    "            bars.to_parquet(DATA_PATH + f\"raw/m1/{ticker}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Updates\n",
+    "Process day-by-day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_flatfile(local_file_path):\n",
+    "    \"\"\"Unzips the flat file and split or append it to ticker files.\n",
+    "    \"\"\"\n",
+    "    with gzip.open(local_file_path) as f:\n",
+    "        all_bars = pd.read_csv(f)\n",
+    "        all_bars = all_bars[['window_start', 'ticker', 'open', 'high', 'low', 'close', 'volume']]\n",
+    "        all_bars = all_bars.rename(columns={'window_start': 'datetime'})\n",
+    "        all_bars = all_bars.set_index('datetime')\n",
+    "        all_bars.index = pd.to_datetime(all_bars.index, unit='ns') # Convert to datetime (UTC-naive)\n",
+    "        all_bars.index = all_bars.index.tz_localize(pytz.UTC)  # Make UTC aware (in order to convert)\n",
+    "        all_bars.index = all_bars.index.tz_convert(\"US/Eastern\")  # Convert UTC to ET\n",
+    "        all_bars.index = all_bars.index.tz_localize(None)  # Make timezone naive\n",
+    "        \n",
+    "        for ticker in all_bars['ticker'].unique():\n",
+    "            bars = all_bars[all_bars['ticker'] == ticker]\n",
+    "            bars = bars[['open', 'high', 'low', 'close', 'volume']]\n",
+    "\n",
+    "            if os.path.isfile(DATA_PATH + f'raw/m1/{ticker}.parquet'):\n",
+    "                write(DATA_PATH + f\"raw/m1/{ticker}.parquet\", bars, append=True, compression=\"snappy\", row_group_offsets=25000)\n",
+    "            else:\n",
+    "                bars.to_parquet(DATA_PATH + f\"raw/m1/{ticker}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for day in get_market_dates(START_DATE, END_DATE):\n",
+    "    destination = DATA_PATH + f'raw/{day.isoformat()}.csv.gz'\n",
+    "    s3.download_file('flatfiles', \n",
+    "                 f'us_stocks_sip/minute_aggs_v1/{day.year}/{day.strftime(\"%m\")}/{day.isoformat()}.csv.gz', \n",
+    "                 destination)\n",
+    "    process_flatfile(destination)\n",
+    "    os.remove(destination)"
    ]
   }
  ],
