--- a/08_renamings.ipynb
+++ b/08_renamings.ipynb
@@ -25,7 +25,7 @@
     "import shutil\n",
     "import os\n",
     "DATA_PATH = \"../data/polygon/\"\n",
-    "END_DATE = last_trading_date_before(date(2024, 4, 15))"
+    "END_DATE = last_trading_date_before(date(2024, 4, 19))"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "market_dates = get_market_dates()\n",
     "ticker_changes = get_ticker_changes()\n",
     "\n",
-    "tickers_v4.insert(loc = 2, column = 'tickers_old', value = [[] for _ in range(len(tickers_v4))])\n",
+    "tickers_v4.insert(loc = 2, column = 'tickers_old', value = [{} for _ in range(len(tickers_v4))])\n",
     "\n",
     "while True:\n",
     "    tickers_v4 = tickers_v4.sort_values(by='end_data').reset_index(drop=True)\n",
@@ -192,7 +192,7 @@
     "            continue\n",
     "        index_to = row_to.index[0]\n",
     "        id_to = row_to['ID'].values[0]\n",
-    "        tickers_v4.loc[index_to, \"tickers_old\"].append([start_data_to.isoformat(), ticker_from])\n",
+    "        tickers_v4.loc[index_to, \"tickers_old\"][start_data_to.isoformat()] = ticker_from\n",
     "        tickers_v4.loc[index_to, \"start_date\"] = start_date_from\n",
     "        tickers_v4.loc[index_to, \"start_data\"] = start_data_from\n",
     "\n",
