--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -12,7 +12,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "###\n",
     "from polygon.rest import RESTClient\n",
@@ -187,13 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pytz\n",
     "import gzip\n",
+    "import calendar\n",
     "from pytz import timezone\n",
     "from times import get_market_dates\n",
     "import boto3\n",
@@ -227,8 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODELETE\n",
-    "for day in get_market_dates(date(2004, 1, 1), END_DATE):\n",
+    "for day in get_market_dates(date(2003, 9, 10), END_DATE):\n",
     "    destination = DATA_PATH + f'raw/flatfiles/{day.isoformat()}.csv.gz'\n",
     "    s3.download_file('flatfiles', \n",
     "                f'us_stocks_sip/minute_aggs_v1/{day.year}/{day.strftime(\"%m\")}/{day.isoformat()}.csv.gz', \n",
@@ -239,18 +248,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Process year-by-year (this takes enormously long btw, however you only need to run it one time so I won't go into the hassle to optimize speed.)"
+    "Extract and concatenate into monthly files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for year in range(2003, 2024+1):\n",
+    "def concatenate_and_save(start_date, end_date, file_name):\n",
     "    files = []\n",
-    "    for day in get_market_dates(date(year, 1, 1), date(year, 12, 31)):\n",
+    "    market_dates = get_market_dates(start_date, end_date)\n",
+    "    if len(market_dates) == 0:\n",
+    "        return\n",
+    "    for day in market_dates:\n",
     "        destination = DATA_PATH + f'raw/flatfiles/{day.isoformat()}.csv.gz'\n",
     "        with gzip.open(destination) as f:\n",
     "            all_bars = pd.read_csv(f)\n",
@@ -262,24 +274,56 @@
     "            # Convert UTC to ET\n",
     "            # Make timezone naive\n",
     "            all_bars.index = all_bars.index.tz_localize(pytz.UTC).tz_convert(\"US/Eastern\").tz_localize(None)  \n",
+    "\n",
     "            files.append(all_bars)\n",
     "            print(day)\n",
     "        \n",
     "    all_bars = pd.concat(files)\n",
     "    all_bars = all_bars.reset_index()\n",
     "    all_bars = all_bars.set_index('ticker')\n",
+    "    all_bars = all_bars.sort_index()\n",
     "\n",
-    "    for ticker in list(set(all_bars.index.unique())):\n",
-    "        bars = all_bars.loc[ticker]\n",
-    "        if isinstance(bars, pd.Series):\n",
-    "            bars = all_bars.loc[[ticker]]\n",
-    "        bars = bars[['datetime', 'open', 'high', 'low', 'close', 'volume']]\n",
-    "        bars = bars.set_index('datetime')\n",
+    "    all_bars.to_parquet(DATA_PATH + f\"raw/flatfiles/{file_name}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in range(2003, 2024 + 1):\n",
+    "    files = []\n",
+    "    for month in range(1, 12 + 1):\n",
+    "        _, end_date = calendar.monthrange(year, month)\n",
+    "        concatenate_and_save(date(year, month, 1), date(year, month, end_date), f\"{year}-{month}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in range(2003, 2024+1):\n",
+    "    files = []\n",
+    "    for month in range(1, 12+1):\n",
+    "        if not os.path.isfile(DATA_PATH + f\"raw/flatfiles/{year}-{month}.parquet\"):\n",
+    "            continue\n",
+    "        \n",
+    "        all_bars = pd.read_parquet(DATA_PATH + f\"raw/flatfiles/{year}-{month}.parquet\")\n",
     "\n",
-    "        if os.path.isfile(DATA_PATH + f'raw/m1/{ticker}.parquet'):\n",
-    "            write(DATA_PATH + f\"raw/m1/{ticker}.parquet\", bars, append=True, compression=\"snappy\", row_group_offsets=25000)\n",
-    "        else:\n",
-    "            bars.to_parquet(DATA_PATH + f\"raw/m1/{ticker}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
+    "        for ticker in list(set(all_bars.index.unique())):\n",
+    "            bars = all_bars.loc[ticker]\n",
+    "            if isinstance(bars, pd.Series):\n",
+    "                bars = all_bars.loc[[ticker]]\n",
+    "            bars = bars[['datetime', 'open', 'high', 'low', 'close', 'volume']]\n",
+    "            bars = bars.set_index('datetime')\n",
+    "\n",
+    "            if os.path.isfile(DATA_PATH + f'raw/m1/{ticker}.parquet'):\n",
+    "                write(DATA_PATH + f\"raw/m1/{ticker}.parquet\", bars, append=True, compression=\"snappy\", row_group_offsets=25000)\n",
+    "            else:\n",
+    "                bars.to_parquet(DATA_PATH + f\"raw/m1/{ticker}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
    ]
   },
   {
@@ -289,6 +333,11 @@
     "### Updates\n",
     "Process day-by-day"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
